--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ cryptography==46.0.3
 defusedxml==0.7.1
 Django==6.0
 django-cloudinary-storage==0.3.0
+django-cors-headers==4.9.0
 django-debug-toolbar==6.1.0
 django-filter==25.2
+django-sendgrid-v5==1.3.1
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 djoser==2.3.3
@@ -16,6 +18,7 @@ drf-nested-routers==0.95.0
 drf-yasg==1.21.14
 idna==3.11
 inflection==0.5.1
+MarkupSafe==3.0.3
 oauthlib==3.3.1
 packaging==26.0
 pillow==12.0.0
@@ -23,11 +26,13 @@ psycopg2-binary==2.9.11
 pycparser==2.23
 PyJWT==2.10.1
 python-decouple==3.8
+python-http-client==3.3.7
 python3-openid==3.2.0
 pytz==2025.2
 PyYAML==6.0.3
 requests==2.32.5
 requests-oauthlib==2.0.0
+sendgrid==6.12.5
 six==1.17.0
 social-auth-app-django==5.7.0
 social-auth-core==4.8.3
@@ -35,4 +40,5 @@ sqlparse==0.5.5
 tzdata==2025.3
 uritemplate==4.2.0
 urllib3==2.6.3
+Werkzeug==3.1.5
 whitenoise==6.11.0
